<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>integration_tests_pkg</name>
  <version>1.1.2</version>
  <description>Package to make a full system test / integration test</description>
  <maintainer email="t.alscher@robast.de">tobias</maintainer>
  <license>None</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>communication_interfaces</depend>
  <build_depend>nav2_common</build_depend>

  <build_depend>navigation2</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>tiplu_world</exec_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>drawer_gate_simulation</test_depend>
  <test_depend>gazebo_controller_manager</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
