<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_bringup_door_opening</name>
  <version>0.0.0</version>
  <description>Launch files to start the oak-d camera that is used for the door opening mechanism</description>
  <maintainer email="j.ritterbach@robast.de">Jacob Ritterbach</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>
  <exec_depend>depthai_examples</exec_depend>
  <exec_depend>oak_bringup</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
